SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
/*
 * SPIXI User Interface Kit
 * https://ixian.io | https://spixi.im
 */

/* 
 * Content Sections:
 * 
 * Fonts
 * General
 * Placeholders
 * Toolbar
 * BalanceBar
 * OptionBar
 * DescriptionBar
 * TabBar
 * ToastBar
 * ErrorBar
 * CallBar
 * Buttons
 * TextField
 * Switch
 * Separators
 * ExpansionBox
 * Sidebar
 * ListItems
 * Chat
 * Modals
 * Misc
 * Colors
 * Animation
 */

/* Fonts */
@font-face {
    font-family: 'robotoregular';
    src: url('../fonts/Roboto-Regular-webfont.eot');
    src: url('../fonts/Roboto-Regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Roboto-Regular-webfont.woff') format('woff'),
         url('../fonts/Roboto-Regular-webfont.ttf') format('truetype'),
         url('../fonts/Roboto-Regular-webfont.svg#robotoregular') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'robotobold';
    src: url('../fonts/Roboto-Bold-webfont.eot');
    src: url('../fonts/Roboto-Bold-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Roboto-Bold-webfont.woff') format('woff'),
         url('../fonts/Roboto-Bold-webfont.ttf') format('truetype'),
         url('../fonts/Roboto-Bold-webfont.svg#robotobold') format('svg');
    font-weight: normal;
    font-style: normal;
}


/* General */
body {
    font-family:'robotoregular', sans-serif;
}

a:hover {
    text-decoration: none;
}

a:active {
    text-decoration: none;
}

#wrap {
  /*  min-height: 100%;
    height: auto !important;*/
    /* Negative indent footer by its height */
    /*margin: 0 auto -0px;*/
    
    padding: 0 0;
    
    /* Prevent overscroll bounce  */
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: auto;
    
    background: #eef2f5;
}

img.emoji {
   height: 2em;
   width: 2em;
   margin: 0 .05em 0 .1em;
   vertical-align: -0.5em;
}

.spixi-center {
    text-align: center;
}

.spixi-italic {
    font-style: italic;
}

.spixi-bold {
    font-weight: bold;
}


/* Placeholders */
.spixi-holder-20 {
    width: 100%;
    height: 20px;
}
.spixi-holder-40 {
    width: 100%;
    height: 40px;
}

.spixi-holder-64 {
    width: 100%;
    height: 64px;
}

/* Toolbar */
.spixi-toolbar {
    width: 100%;
    height: 54px;
    position: fixed;
    z-index: 100;
    
    font-size: 16pt;
    background-image: linear-gradient(#951453, #c2185b);

   /* background: #771250;*/
    color: #FFF;  
}
.spixi-toolbar.extended {
    height: 128px;
}
.spixi-toolbar.extended-main {
    height: 166px;
}
.spixi-toolbar.shadow {
    box-shadow:0px 1px 2px #777;
}

.spixi-toolbar-row {
    padding-top: 10px;
    height: 56px;
}

.spixi-toolbar-row.extended {
    padding-top: 12px;
    font-size: 14pt;
}
.spixi-toolbar-row-details {
    padding-right: 15pt;
    font-size:9pt;
}

.spixi-toolbar-holder {
    width: 100%;
    height: 54px;
}
.spixi-toolbar-holder.extended {
    height: 128px;
}
.spixi-toolbar-holder.extended-main {
    height: 166px;
}

.spixi-toolbar-line {
    width: 85%;
    height: 1px;
    background: rgba(0,0,0,0.2);
    margin: auto;
}

.spixi-toolbar-logo {
    background-image: url('../img/spixitoolbarlogo.png');
    width: 122px;
    height: 40px;
    background-size: 121px 40px;
    background-repeat: no-repeat;
    background-position: center;
    margin: auto;
}

.spixi-toolbar-option {
    padding-top: 4pt;
    font-size: 12pt;
}

.spixi-toolbar-chat-status {
    font-size: 11pt;
    margin-top: -4pt;
    font-weight: 200;
}

.spixi-toolbar-contact {
    width: 100%;
    height: 146px;
    font-size: 16pt;
    color: #FFF; 
    background-color: #25193c;
}

.spixi-toolbar-contact-name {
    margin-top: 24px;
    margin-left: 20px;
}
.spixi-toolbar-contact-status {
    margin-left: 20px;
    font-size: 9pt;
}

/* BalanceBar */
.spixi-balancebar {
    width: 100%;
    height: 111px;
    color: #fff;
    background-color: #25193c;
    box-shadow:0px 4px 10px #777;
}
.spixi-balancebar-label {
    font-size: 12pt;
    padding-left: 20px;
    padding-top: 16px;
}
.spixi-balancebar-balance {
    font-size: 14pt;
    padding-left: 20px;
    padding-top: 8px;
}
.spixi-balancebar-line {
    margin-left: 20px;
    margin-top: 5px;
    width: 110px;
    height: 2px;
    background-color: #1692d9;
}
.spixi-balancebar-info {
    font-size: 8pt;
    font-style: italic;
    padding-left: 20px;
    padding-top: 4px;
}
.spixi-balancebar-quickscan {
    float: right;
    margin-top: -80px;
    margin-right: 20px;
}

/* OptionBar */
.spixi-optionbar {
    width: 100%;
    height: 81px;
    color: #fff;
    background-color: #25193c;
    box-shadow:0px 4px 10px #777;
}
.spixi-optionbar-frame {
    width:90%; 
    margin: auto;
}
.spixi-optionbar-tab {
    padding-top: 20px;
    height: 81px;
    background: #25193c;
    text-align: center;
    font-size: 10pt;
    font-weight: bold;
    color: #FFFFFF;
}
.spixi-optionbar-tab:hover {
    background: #543c83;
}
.spixi-optionbar-tab:active {
    color: #dc236c;
    background: #25193c;
}
.spixi-optionbar-tab:active a {
    color: #dc236c;
}
.spixi-optionbar-tab a {
    color: #FFFFFF; 
}
.spixi-optionbar-tab-icon {
    font-size: 16pt;
    height: 26px;
}
.spixi-optionbar-label {
    margin-top: 3px;
}

/* DescriptionBar */
.spixi-descriptionbar {
    width: 100%;
    height: 100px;
    color: #fff;
    background-color: #25193c;
    box-shadow:0px 4px 10px #777;    
}
.spixi-descriptionbar.small {
    height: 70px;
}
.spixi-descriptionbar-row {
    padding-top: 20px;
}
.spixi-descriptionbar-row-details {
    padding-right: 30px;
    font-size:9pt;
    max-height: 60px;
}
.spixi-descriptionbar.chat {
    height: 92px;
    background-color: #55516c;
}

/* TabBar */
.spixi-footer {
    /*position: fixed;*/
    height: 64px;
    bottom: 0;
    width: 100%;
    background-color: #ad1457;
    border-top: 1px solid #CC87AB;
}

.spixi-footer-row {
    height: 64px;
    text-decoration: none;
}
/* ... */

